--- a/app/partials/issue/issues.jade
+++ b/app/partials/issue/issues.jade
@@ -12,6 +12,7 @@ div.wrapper.issues.lightbox-generic-form(tg-issues, ng-controller="IssuesControl
           on-save-custom-filter="ctrl.saveCustomFilter(name)"
           on-add-filter="ctrl.addFilter(filter)"
           on-select-custom-filter="ctrl.selectCustomFilter(filter)"
+          on-remove-custom-filter="ctrl.removeCustomFilter(filter)"
           on-remove-filter="ctrl.removeFilter(filter)"
           on-change-q="ctrl.changeQ(q)"
         )
