--- a/app/partials/kanban/kanban.jade
+++ b/app/partials/kanban/kanban.jade
@@ -16,6 +16,7 @@ div.wrapper(tg-kanban, ng-controller="KanbanController as ctrl"
           on-save-custom-filter="ctrl.saveCustomFilter(name)"
           on-add-filter="ctrl.addFilter(filter)"
           on-select-custom-filter="ctrl.selectCustomFilter(filter)"
+          on-remove-custom-filter="ctrl.removeCustomFilter(filter)"
           on-remove-filter="ctrl.removeFilter(filter)"
           on-change-q="ctrl.changeQ(q)"
         )
