--- a/app/styles/layout/kanban.scss
+++ b/app/styles/layout/kanban.scss
@@ -15,3 +15,9 @@
         display: none;
     }
 }
+
+.kanban-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
