--- a/app/modules/components/card/card-templates/card-owner.jade
+++ b/app/modules/components/card/card-templates/card-owner.jade
@@ -1,5 +1,5 @@
 .card-owner
-    .card-owner-info(ng-if="vm.zoom >= 0 && vm.item.get('assigned_to')")
+    .card-owner-info(ng-if="vm.item.get('assigned_to')")
         .card-owner-avatar
             img(
                 ng-src="{{vm.item.getIn(['assigned_to', 'photo'])}}"
@@ -10,42 +10,27 @@
                 svg-icon="icon-iocaine"
                 svg-title="COMMON.IOCAINE_TEXT"
             )
-        span.card-owner-name(ng-if="vm.zoom >= 2") {{vm.item.getIn(['assigned_to', 'full_name'])}}
-        a.card-title(
-            ng-if="vm.zoom < 2"
-            href=""
-            tg-nav="{{vm.getNavKey()}}:project=vm.project.slug,ref=vm.item.getIn(['model', 'ref'])",
-            tg-nav-get-params="{\"kanban-status\": {{vm.item.getIn(['model', 'status'])}}}"
-            title="#{{ ::vm.item.getIn(['model', 'ref']) }} {{ vm.item.getIn(['model', 'subject'])}}"
-        ) 
-            span(ng-if="vm.zoom < 2") {{::"#" + vm.item.getIn(['model', 'ref'])}}
-            span.e2e-title(ng-if="vm.zoom == 1") {{vm.item.getIn(['model', 'subject'])}}
-
-    .card-owner-info(ng-if="vm.zoom >= 0 && !vm.item.get('assigned_to')")
+        span.card-owner-name(ng-if="vm.visible('owner')") {{vm.item.getIn(['assigned_to', 'full_name'])}}
+        div(ng-if="!vm.visible('owner')")
+            include card-title
+        
+    .card-owner-info(ng-if="!vm.item.get('assigned_to')")
         img(ng-src="/#{v}/images/unnamed.png")
         span.card-owner-name(
-            ng-if="vm.zoom >= 2",
+            ng-if="vm.visible('owner')",
             translate="COMMON.ASSIGNED_TO.NOT_ASSIGNED"
         )
-        a.card-title(
-            ng-if="vm.zoom < 2"
-            href=""
-            tg-nav="{{vm.getNavKey()}}:project=vm.project.slug,ref=vm.item.getIn(['model', 'ref'])",
-            tg-nav-get-params="{\"kanban-status\": {{vm.item.getIn(['model', 'status'])}}}"
-            title="#{{ ::vm.item.getIn(['model', 'ref']) }} {{ vm.item.getIn(['model', 'subject'])}}"
-        ) 
-            span(ng-if="vm.zoom < 2") {{::"#" + vm.item.getIn(['model', 'ref'])}}
-            span.e2e-title(ng-if="vm.zoom == 1") {{vm.item.getIn(['model', 'subject'])}}
-
+        div(ng-if="!vm.visible('owner')")
+            include card-title
+        
     .card-owner-actions(
-        ng-if="vm.zoom >= 2"
+        ng-if="vm.visible('owner')"
         tg-check-permission="{{vm.getPermissionsKey()}}"
     )
         a.e2e-assign.card-owner-assign(
             ng-click="vm.onClickAssignedTo({id: vm.item.get('id')})"
             href=""
           )
-            //todo icon
             tg-svg(svg-icon="icon-add-user")
             span(translate="COMMON.CARD.ASSIGN_TO")
 
@@ -54,6 +39,5 @@
             ng-click="vm.onClickEdit({id: vm.item.get('id')})"
             tg-loading="vm.item.get('loading')"
         )
-            //todo icon
             tg-svg(svg-icon="icon-edit")
             span(translate="COMMON.CARD.EDIT")
