--- a/app/modules/components/card/card.jade
+++ b/app/modules/components/card/card.jade
@@ -1,14 +1,16 @@
-.card-inner(
-    ng-class="{'card-blocked': vm.item.getIn(['model', 'is_blocked']), 'archived': vm.archived, 'zoom-0': vm.zoom == 0, 'zoom-1': vm.zoom == 1, 'zoom-2': vm.zoom == 2, 'zoom-3': vm.zoom == 3, 'zoom-4': vm.zoom == 4}"
+div(
+    class="card-inner {{'zoom-' + vm.zoomLevel}}"
+    ng-class="{'card-blocked': vm.item.getIn(['model', 'is_blocked']), 'archived': vm.archived}"
 )
     include card-templates/card-tags
     include card-templates/card-owner
-    include card-templates/card-title
+    div(ng-if="vm.visible('owner')")
+        include card-templates/card-title
     include card-templates/card-data
     include card-templates/card-completion
     include card-templates/card-tasks
     tg-card-slideshow(
-        ng-if="vm.zoom >= 3 && !vm.item.getIn(['model', 'attachments'])"
+        ng-if="vm.item.getIn(['model', 'attachments']).size && (vm.visible('attachments') || !vm.item.get('fold'))"
         attachments="vm.item.getIn(['model', 'attachments'])"
     )
     include card-templates/card-unfold
