--- a/app/partials/includes/modules/kanban-table.jade
+++ b/app/partials/includes/modules/kanban-table.jade
@@ -2,7 +2,8 @@ div.kanban-table(tg-kanban-squish-column, tg-kanban-sortable)
     div.kanban-table-header
         div.kanban-table-inner
             h2.task-colum-name(ng-repeat="s in usStatusList track by s.id",
-                               ng-style="{'border-top-color':s.color}", tg-bo-title="s.name",
+                               ng-style="{'border-top-color':s.color}",
+                               tg-bo-title="s.name",
                                ng-class='{vfold:folds[s.id]}',
                                tg-class-permission="{'readonly': '!modify_task'}")
                 span(tg-bo-bind="s.name")
@@ -21,21 +22,6 @@ div.kanban-table(tg-kanban-squish-column, tg-kanban-sortable)
                         ng-class='{hidden:!folds[s.id]}'
                     )
                         tg-svg(svg-icon="icon-unfold-column")
-                    a.option(
-                        href=""
-                        title="{{'KANBAN.TITLE_ACTION_FOLD_CARDS' | translate}}"
-                        ng-class="{hidden:statusViewModes[s.id] == 'minimized'}"
-                        ng-click="ctrl.updateStatusViewMode(s.id, 'minimized')"
-                    )
-                        tg-svg.fold-action(svg-icon="icon-fold-row")
-                    a.option(
-                        href=""
-                        title="{{'KANBAN.TITLE_ACTION_UNFOLD_CARDS' | translate}}"
-                        ng-class="{hidden:statusViewModes[s.id] == 'maximized'}"
-                        ng-click="ctrl.updateStatusViewMode(s.id, 'maximized')"
-                    )
-                        tg-svg.fold-action(svg-icon="icon-unfold-row")
-
                     a.option(
                         href=""
                         title="{{'KANBAN.TITLE_ACTION_ADD_US' | translate}}"
@@ -80,11 +66,13 @@ div.kanban-table(tg-kanban-squish-column, tg-kanban-sortable)
                     ng-class="{'kanban-task-maximized': ctrl.isMaximized(s.id), 'kanban-task-minimized': ctrl.isMinimized(s.id)}"
                     tg-class-permission="{'readonly': '!modify_task'}"
                     tg-bind-scope,
+                    on-toggle-fold="ctrl.toggleFold(id)"
                     on-click-edit="ctrl.editUs(id)"
                     on-click-assigned-to="ctrl.changeUsAssignedTo(id)"
                     project="project"
                     item="us"
                     zoom="ctrl.zoom"
+                    zoom-level="ctrl.zoomLevel"
                     archived="ctrl.isUsInArchivedHiddenStatus(us.get('id'))"
                 )
 
