--- a/app/partials/includes/modules/taskboard-table.jade
+++ b/app/partials/includes/modules/taskboard-table.jade
@@ -65,11 +65,13 @@ div.taskboard-table(tg-taskboard-squish-column, tg-taskboard-sortable)
                         ng-class="{'kanban-task-maximized': ctrl.isMaximized(s.id), 'kanban-task-minimized': ctrl.isMinimized(s.id)}"
                         tg-class-permission="{'readonly': '!modify_task'}"
                         tg-bind-scope,
+                        on-toggle-fold="ctrl.toggleFold(id)"                        
                         on-click-edit="ctrl.editTask(id)"
                         on-click-assigned-to="ctrl.changeTaskAssignedTo(id)"
                         project="project"
                         item="task"
                         zoom="ctrl.zoom"
+                        zoom-level="ctrl.zoomLevel"
                         type="task"
                     )
             div.task-row(ng-init="us = null", ng-class="{'row-fold':usFolded[null]}")
@@ -104,14 +106,16 @@ div.taskboard-table(tg-taskboard-squish-column, tg-taskboard-sortable)
                     )
 
                     tg-card.card.ng-animate-disabled(
+                        tg-bind-scope,
                         tg-repeat="task in usTasks.getIn(['null', st.id.toString()]) track by task.get('id')"
                         ng-class="{'kanban-task-maximized': ctrl.isMaximized(s.id), 'kanban-task-minimized': ctrl.isMinimized(s.id)}"
                         tg-class-permission="{'readonly': '!modify_task'}"
-                        tg-bind-scope,
+                        on-toggle-fold="ctrl.toggleFold(id)"
                         on-click-edit="ctrl.editTask(id)"
                         on-click-assigned-to="ctrl.changeTaskAssignedTo(id)"
                         project="project"
                         item="task"
                         zoom="ctrl.zoom"
+                        zoom-level="ctrl.zoomLevel"
                         type="task"
                     )
