--- a/app/partials/kanban/kanban.jade
+++ b/app/partials/kanban/kanban.jade
@@ -5,7 +5,6 @@ div.wrapper(tg-kanban, ng-controller="KanbanController as ctrl"
     tg-project-menu
 
     section.main.kanban
-        include ../includes/components/mainTitle
         tg-filter(
           ng-show="ctrl.openFilter"
           q="ctrl.filterQ"
@@ -20,15 +19,16 @@ div.wrapper(tg-kanban, ng-controller="KanbanController as ctrl"
           on-remove-filter="ctrl.removeFilter(filter)"
           on-change-q="ctrl.changeQ(q)"
         )
-        tg-board-zoom.board-zoom(
-            value="ctrl.zoom"
-            storage="kanban_zoom"
-        )
-        button.button-filter(
-            ng-class="{'button-filters-applied': !!ctrl.selectedFilters.length}"
-            ng-click="ctrl.openFilter = !ctrl.openFilter"
-        )
-            tg-svg(svg-icon="icon-filters")
+        .kanban-header
+            include ../includes/components/mainTitle
+            .taskboard-actions
+                tg-kanban-board-zoom(on-zoom-change="ctrl.setZoom(zoomLevel, zoom)")
+        
+                button.button-filter(
+                    ng-class="{'button-filters-applied': !!ctrl.selectedFilters.length}"
+                    ng-click="ctrl.openFilter = !ctrl.openFilter"
+                )
+                    tg-svg(svg-icon="icon-filters")
 
         include ../includes/modules/kanban-table
 
