--- a/app/modules/components/filter/filter.jade
+++ b/app/modules/components/filter/filter.jade
@@ -3,7 +3,7 @@ h1
 
 form
     fieldset
-        input(
+        input.e2e-filter-q(
             type="text",
             placeholder="{{'COMMON.FILTERS.INPUT_PLACEHOLDER' | translate}}",
             ng-model="vm.q"
@@ -19,13 +19,13 @@ form
     .filters-applied
         .single-filter.ng-animate-disabled(ng-repeat="it in vm.selectedFilters track by it.key")
             span.name(ng-attr-style="{{it.color ? 'border-left: 3px solid ' + it.color: ''}}") {{it.name}}
-            a.remove-filter(
+            a.remove-filter.e2e-remove-filter(
                ng-click="vm.unselectFilter(it)"
                href=""
            )
                 tg-svg(svg-icon="icon-close")
 
-        a.button.button-gray.save-filters.ng-animate-disabled(
+        a.button.button-gray.save-filters.ng-animate-disabled.e2e-open-custom-filter-form(
             ng-click="vm.customFilterForm = true"
             ng-if="vm.selectedFilters.length && !vm.customFilterForm"
             href="",
@@ -37,7 +37,7 @@ form
             ng-if="vm.customFilterForm"
             ng-submit="vm.saveCustomFilter()"
         )
-            input.my-filter-name(
+            input.my-filter-name.e2e-filter-name-input(
                 tg-autofocus
                 ng-model="vm.customFilterName"
                 type="text"
@@ -50,7 +50,7 @@ form
                 ng-class="{selected: vm.isOpen(filter.dataType)}"
                 ng-repeat="filter in vm.filters track by filter.dataType"
             )
-                a.filters-cat-single(
+                a.filters-cat-single.e2e-category(
                     ng-class="{selected: vm.isOpen(filter.dataType)}"
                     ng-click="vm.toggleFilterCategory(filter.dataType)"
                     href=""
@@ -76,9 +76,9 @@ form
                         ng-click="vm.selectFilter(filter, it)"
                     )
                         span.name(ng-attr-style="{{it.color ? 'border-left: 3px solid ' + it.color: ''}}") {{it.name}}
-                        span.number(ng-if="it.count > 0") {{it.count}}
+                        span.number.e2e-filter-count(ng-if="it.count > 0") {{it.count}}
 
-            li.custom-filters(ng-class="{selected: vm.isOpen('custom-filter')}")
+            li.custom-filters.e2e-custom-filters(ng-class="{selected: vm.isOpen('custom-filter')}")
                 a.filters-cat-single(
                     ng-class="{selected: vm.isOpen('custom-filter')}"
                     ng-click="vm.toggleFilterCategory('custom-filter')"
@@ -98,12 +98,12 @@ form
                     ng-if="vm.isOpen('custom-filter')",
                     tg-filter-slide-down
                 )
-                    .single-filter.ng-animate-disabled(
+                    .single-filter.ng-animate-disabled.e2e-custom-filter(
                         ng-repeat="it in vm.customFilters"
                         ng-click="vm.selectCustomFilter(it)"
                     )
                         span.name {{it.name}}
-                        a.remove-filter(
+                        a.remove-filter.e2e-remove-custom-filter(
                             ng-click="vm.removeCustomFilter(it)"
                             href=""
                         )
