custom zoom levels

--- a/app/modules/components/board-zoom/board-zoom.jade
+++ b/app/modules/components/board-zoom/board-zoom.jade
@@ -1,7 +1,7 @@
 input.range-slider(
     type="range",
     min="0",
-    max="4",
+    max="{{levels - 1}}",
     step="1"
     ng-model="value"
     ng-model-options="{ debounce: 200 }"
